[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bridgebase"
version = "0.1.0"
description = "Multi-database SDK with gateway socket authentication"
requires-python = ">=3.10"
license = { text = "MIT" }
readme = "README.md"

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
tigerbeetle = [
    "tigerbeetle==0.16.70",
]
redis = [
    "redis>=5.0.0",
]
all = [
    "tigerbeetle==0.16.70",
    "redis>=5.0.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.3",
]

[tool.setuptools.packages.find]
include = ["bridgebase*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[project.urls]
Homepage = "https://github.com/bridgebase-cloud/bridgebase-py"
Documentation = "https://github.com/bridgebase-cloud/bridgebase-py"
Issues = "https://github.com/bridgebase-cloud/bridgebase-py/issues"

