[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bridgebase"
version = "0.2.0"
description = "Multi-database SDK with gateway socket authentication"
requires-python = ">=3.10"
license = { text = "MIT" }
readme = "README.md"

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
# Individual adapters can be installed separately
# In the future, this will be replaced with separate packages:
# pip install bridgebase-redis
# pip install bridgebase-tigerbeetle
tigerbeetle = [
    "tigerbeetle==0.16.70",
]
redis = [
    "redis>=5.0.0",
]
all = [
    "tigerbeetle==0.16.70",
    "redis>=5.0.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.3",
    "mypy>=1.0",
]

[tool.setuptools.packages.find]
# Find all packages in bridgebase namespace
include = ["bridgebase*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[project.urls]
Homepage = "https://github.com/bridgebase-cloud/bridgebase-py"
Documentation = "https://github.com/bridgebase-cloud/bridgebase-py"
Issues = "https://github.com/bridgebase-cloud/bridgebase-py/issues"
Repository = "https://github.com/bridgebase-cloud/bridgebase-py"

